--- a/index.html
+++ b/index.html
@@ -897,10 +897,10 @@ p.footer-text a{color:#d7d8d8}
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-tip" title="Tip"></i>
+<i class="fa icon-warning" title="Warning"></i>
 </td>
 <td class="content">
-Refer to the <a href="https://github.com/aws-ia/cfn-ps-superwerker" target="_blank" rel="noopener">GitHub repository</a> to view source files, report bugs, submit feature ideas, and post feedback about this Partner Solution. To comment on the documentation, refer to <a href="#_feedback">Feedback</a>.
+This guide and underlying repo are outdated. For the latest information, see <a href="https://superwerker.awsworkshop.io/">here</a>
 </td>
 </tr>
 </table>
