chore: change banner color

--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@ p.footer-text a{color:#d7d8d8}
 <img src="https://aws-quickstart.s3.amazonaws.com/cfn-ps-superwerker/docs/boilerplate/.images/aws-quickstart-graphic.png" alt="">
 </div>
 </div>
-<div class="admonitionblock tip">
+<div class="admonitionblock caution">
 <table>
 <tr>
 <td class="icon">
